--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: php
+
 php:
   - 5.5
   - 5.6
@@ -8,4 +9,4 @@ before-script:
   - composer install --no-interaction
 
 script:
-  - vendor/bin/phpunit
+  - ./vendor/bin/phpunit
